<resources>
    <string name="app_name">PulseAlarm</string>
    <string name="currentHeartRateLabel">Current heart rate</string>
    <string name="currentHeartRateValue">0</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settingsHeartRateLower">Min heart rate</string>
    <string name="settingsHeartRateUpper">Max heart rate</string>
    <string name="saveSettingsButton">Save</string>
    <string name="mainTitle">Pulse Alarm</string>
    <string name="settingsTitle">Settings</string>
    <string name="settingsActivityLabel">Settings</string>

    <string name="prefLowerHeartRate">prefLowerHeartRate</string>
    <string name="prefUpperHeartRate">prefUpperHeartRate</string>

</resources>
