<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_height="65dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textHeartRateLowerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextHeartRateLower"
                android:text="@string/settingsHeartRateLower" />

            <EditText
                android:id="@+id/editTextHeartRateLower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:gravity="center"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textHeartRateUpperLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTextHeartRateUpper"
                android:text="@string/settingsHeartRateUpper" />

            <EditText
                android:id="@+id/editTextHeartRateUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:gravity="center"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveSettingsButton" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsTitle"
        app:layout_anchor="@+id/appbar"
        android:textSize="30sp"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>